[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymosquitto"
version = "0.1.0"
description = "Lightweight Python MQTT client wrapping libmosquitto C library via ctypes"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "twine",
    "pytest",
    "matplotlib",
    "paho-mqtt",
    "amqtt",
]

[tool.black]
target-version = ["py313"]
line-length = 119
