[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymosquitto"
version = "0.1.0"
description = "Lightweight Python MQTT client implemented as a simple wrapper over libmosquitto"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "twine",
    "pytest",
    "matplotlib",
    "paho-mqtt",
    "amqtt",
]

[tool.black]
target-version = ["py313"]
line-length = 119
